--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
         environment:
             - PUID=1002
             - PGID=1002
-            - SERVER_NAME="Valheim Docker"
+            - SERVER_NAME=Valheim\ Docker
             - SERVER_PORT=2456
             - SERVER_PASSWORD=secret
+            - SERVER_WORLD=Dedicated
